# bullseye

./: .gitattributes  .gitignore  CMakeLists.txt  README  README.md
assets/shaders/: crosshair_frag.glsl  crosshair_vert.glsl  fragment.glsl  gun_frag.glsl  gun_vert.glsl  light_cube_frag.glsl  light_cube_vert.glsl  physics_debug_frag.glsl  physics_debug_vert.glsl  skybox_frag.glsl  skybox_vert.glsl  vertex.glsl
include/: app_settings.h  camera.h  consts.h  entity.h  gun.h  hud.h  logger.h  math_utils.h  mesh.h  mesh_manager.h  physics_debug_renderer.h  player.h  shader.h  shader_manager.h  simple_timer.h  skybox.h  structs.h  texture_manager.h
src/: camera.cpp  entity.cpp  glad.c  gun.cpp  hud.cpp  main.cpp  mesh.cpp  mesh_manager.cpp  physics_debug_renderer.cpp  player.cpp  shader.cpp  shader_manager.cpp  simple_timer.cpp  skybox.cpp  texture_manager.cpp
src/imgui/: imgui.cpp  imgui_impl_sdl.cpp
src/tobjl/: tiny_obj_loader.cpp
